--- a/demo/index.html
+++ b/demo/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 
-    <title>air-cascade-validator demos</title>
+    <title>earth-editable-layout demos</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="../air-cascade-validator.html">
-    <link rel="import" href="demo-edit.html">
+
+    <link rel="import" href="demo-edit-layout.html">
 
 
     <link rel="import" href="../../paper-styles/classes/typography.html">
@@ -17,13 +17,12 @@
 <body>
 
 <template is="dom-bind">
-    <h1>Cascade Validation</h1>
+    <h1>Earth Edit Layout</h1>
 
     <div class="horizontal center-center layout">
         <div>
-            <h4>Validation Form</h4>
             <div class="horizontal-section">
-                <demo-validator></demo-validator>
+                <demo-edit-layout></demo-edit-layout>
             </div>
         </div>
 
