--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -1,5 +1,13 @@
 <link rel="import" href="../polymer/polymer.html">
 
+<link rel="import" href="../iron-icons/iron-icons.html">
+
+<link rel="import" href="../paper-drawer-panel/paper-drawer-panel.html">
+<link rel="import" href="../paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../paper-toolbar/paper-toolbar.html">
+
+
 <!--
 
 The `earth-editable-layout` provides layout for edition
@@ -17,7 +25,28 @@ The `earth-editable-layout` provides layout for edition
         }
     </style>
     <template>
-        <content></content>
+
+
+
+        <paper-header-panel class="main" main mode="waterfall">
+
+            <!-- Main Toolbar -->
+            <paper-toolbar>
+                <paper-icon-button icon="arrow-back"  on-tap="{{onBack}}"></paper-icon-button>
+                <div class="title">Title</div>
+                <paper-icon-button icon="save" on-tap="moreAction"></paper-icon-button>
+                <paper-icon-button icon="refresh"></paper-icon-button>
+                <paper-icon-button icon="add" on-tap="moreAction">+</paper-icon-button>
+
+                <paper-icon-button icon="more-vert" on-tap="moreAction"></paper-icon-button>
+            </paper-toolbar>
+
+            <div class="content">
+                <content></content>
+            </div>
+        </paper-header-panel>
+
+
     </template>
 </dom-module>
 
