--- a/demo/demo-edit-layout.html
+++ b/demo/demo-edit-layout.html
@@ -28,7 +28,7 @@ The `user-validator` provides
     </style>
     <template>
         <earth-editable-layout>
-            <div bannerTitle>My Title</div>
+            <div bannerTitle>Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
             <div>
                 <h1>My Title</h1>
 
