--- a/demo/demo-edit-layout.html
+++ b/demo/demo-edit-layout.html
@@ -23,10 +23,11 @@ The `user-validator` provides
         :host {
             display: block;
             width: 80vw;
-            height: 400px;
+            height: 100vh;
         }
     </style>
     <template>
+
         <earth-editable-layout>
             <div bannerTitle>Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
             <div>
