--- a/demo/index.html
+++ b/demo/index.html
@@ -6,22 +6,20 @@
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
-    <link rel="import" href="demo-edit-layout.html">
-
-
     <link rel="import" href="../../paper-styles/classes/typography.html">
     <link rel="import" href="../../iron-flex-layout/classes/iron-flex-layout.html">
     <link rel="stylesheet" href="../../paper-styles/demo.css">
 
+    <link rel="import" href="demo-edit-layout.html">
 </head>
-<body>
+<body class="fullbleed layout vertical">
 
 <template is="dom-bind">
     <h1>Earth Edit Layout</h1>
 
-    <div class="horizontal center-center layout">
+    <div class="horizontal center-center layout" >
         <div>
-            <div class="horizontal-section">
+            <div class="horizontal-section" >
                 <demo-edit-layout></demo-edit-layout>
             </div>
         </div>
