--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -7,6 +7,7 @@
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../paper-toolbar/paper-toolbar.html">
 
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 
 <!--
 
@@ -22,18 +23,25 @@ The `earth-editable-layout` provides layout for edition
     <style>
         :host {
             display: block;
+            height: 100%;
         }
     </style>
     <template>
-        <paper-header-panel class="flex">
+
+
+        <paper-header-panel>
 
             <!-- Header Toolbar -->
             <paper-toolbar>
-                <paper-icon-button icon="arrow-back"  on-tap="onBack"></paper-icon-button>
-                <div class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
-                <paper-icon-button icon="check" disabled?="{{!status.toSave}}" on-tap="onSave"></paper-icon-button>
-                <paper-icon-button icon="delete" on-tap="moreAction"></paper-icon-button>
-                <paper-icon-button icon="more-vert" on-tap="moreAction"></paper-icon-button>
+                <paper-icon-button icon="arrow-back" on-tap="onBack"></paper-icon-button>
+                <div class="title">
+                    <content select="[bannerTitle]"></content>
+                </div>
+                <div>
+                    <paper-icon-button icon="check" disabled?="{{!status.toSave}}" on-tap="onSave"></paper-icon-button>
+                    <paper-icon-button icon="delete" disabled?="{{!status.toDelete}}" on-tap="onDelete"></paper-icon-button>
+                    <paper-icon-button icon="more-vert" on-tap="moreAction"></paper-icon-button>
+                </div>
             </paper-toolbar>
 
             <!-- Main Content -->
