--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -61,8 +61,17 @@ The `earth-editable-layout` provides layout for edition
         Polymer({
             is: 'earth-editable-layout',
 
+            properties: {},
 
-            properties: {}
+            onSave: function (event) {
+
+            },
+
+            onDelete: function (event) {
+
+            }
+
+
 
         });
     })();
