--- a/demo/demo-edit-layout.html
+++ b/demo/demo-edit-layout.html
@@ -25,14 +25,20 @@ The `user-validator` provides
     <style>
         :host {
             display: block;
-            width: 80vw;
-            height: 100vh;
+            width: 70vw;
+            height: 90vh;
         }
     </style>
     <template>
 
         <earth-editable-layout>
             <div bannerTitle>Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+            <ul class="dropdown-content">
+                <li><a href="javascript:void(0)">item 1</a></li>
+                <li><a href="javascript:void(0)">item 2</a></li>
+                <li><a href="javascript:void(0)">item 3</a></li>
+            </ul>
+
             <div>
                 <h1>My Title</h1>
 
