--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -65,7 +65,7 @@ The `earth-editable-layout` provides layout for edition
                                 </paper-icon-item>
                             </li>
                             <li>
-                                <paper-icon-item on-tap="_onDelete">
+                                <paper-icon-item on-tap="_onSave">
                                     <iron-icon icon="check" item-icon></iron-icon>
                                     Save
                                 </paper-icon-item>
