--- a/demo/demo-edit-layout.html
+++ b/demo/demo-edit-layout.html
@@ -8,8 +8,7 @@
 
 <link rel="import" href="../earth-editable-layout.html">
 
-<link rel="import" href="../../air-cruddy/air-cruddy.html">
-<link rel="import" href="../../air-cruddy-cloudy/air-cruddy-cloudy-es.html">
+<link rel="import" href="../../air-cruddy/air-cruddy-elasticsearch.html">
 
 <!--
 
@@ -32,7 +31,7 @@ The `user-validator` provides
     <template>
 
         <earth-editable-layout>
-            <div bannerTitle>Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+            <div slot="bannerTitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
             <ul class="dropdown-content">
                 <li><a href="javascript:void(0)">item 1</a></li>
                 <li><a href="javascript:void(0)">item 2</a></li>
@@ -42,11 +41,11 @@ The `user-validator` provides
             <div>
                 <h1>My Title</h1>
 
-                <air-cruddy data="{{data}}" crud-api="air-cruddy-cloudy-es" endpoint="http://localhost:9200/5elements/5elements"
+                <air-cruddy-elasticsearch data="{{data}}"  url="http://localhost:9200/5elements/5elements"
                             entity-id="1" >
-                    <paper-input label="Firstname" value="{{data._source.firstname}}" required></paper-input>
-                    <paper-input label="Lastname" value="{{data._source.lastname}}" required></paper-input>
-                </air-cruddy>
+                    <paper-input label="Firstname" value="{{data.firstname}}" required></paper-input>
+                    <paper-input label="Lastname" value="{{data..lastname}}" required></paper-input>
+                </air-cruddy-elasticsearch>
 
 
             </div>
