--- a/demo/index.html
+++ b/demo/index.html
@@ -6,11 +6,19 @@
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
+
+    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
+    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
+
+
+    <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
     <link rel="import" href="../../paper-styles/classes/typography.html">
-    <link rel="import" href="../../iron-flex-layout/classes/iron-flex-layout.html">
     <link rel="stylesheet" href="../../paper-styles/demo.css">
 
     <link rel="import" href="demo-edit-layout.html">
+
+    <style is="custom-style" include="demo-pages-shared-styles iron-flex iron-flex-alignment">
+    </style>
 </head>
 <body class="fullbleed layout vertical">
 
