--- a/earth-dropdown-trigger.html
+++ b/earth-dropdown-trigger.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../polymer/polymer.html">
 
-<link rel="import" href="../../neon-animation/neon-animations.html">
+<link rel="import" href="../neon-animation/neon-animations.html">
 
 <link rel="import" href="earth-expand-animation.html">
 
@@ -21,7 +21,7 @@ The `earth-dropdown-trigger` provides
     </style>
     <template>
         <div on-tap="open">
-            <content select=".dropdown-trigger"></content>
+            <slot name="dropdown-trigger"></slot>
         </div>
         <iron-dropdown id="dropdown"
                        vertical-align="[[verticalAlign]]"
