--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -3,18 +3,20 @@
 <link rel="import" href="../iron-icons/iron-icons.html">
 <link rel="import" href="../iron-dropdown/iron-dropdown.html">
 
+<link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
+
 <link rel="import" href="../paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="../paper-header-panel/paper-header-panel.html">
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
+
 <link rel="import" href="../paper-toolbar/paper-toolbar.html">
 
-<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../paper-item/paper-item.html">
 <link rel="import" href="../paper-menu/paper-menu.html">
+<link rel="import" href="../paper-item/paper-icon-item.html">
+<link rel="import" href="../paper-item/paper-item.html">
 
 <link rel="import" href="earth-dropdown-trigger.html">
 
-<link rel="import" href="../paper-item/paper-icon-item.html">
 
 <!--
 
@@ -27,7 +29,7 @@ The `earth-editable-layout` provides layout for edition
 
 <dom-module id="earth-editable-layout">
 
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-alignment">
         :host {
             display: block;
             height: 100%;
@@ -35,8 +37,8 @@ The `earth-editable-layout` provides layout for edition
 
        ul {
            list-style-type: none;
-            background-color: var(--paper-menu-background-color, --primary-background-color);
-            color: var(--paper-menu-color, --primary-text-color);
+            background-color: var(--paper-menu-background-color, var(--primary-background-color));
+            color: var(--paper-menu-color, var(--primary-text-color));
         }
 
 
@@ -50,13 +52,13 @@ The `earth-editable-layout` provides layout for edition
             <paper-toolbar>
                 <paper-icon-button icon="arrow-back" on-tap="onBack"></paper-icon-button>
                 <div class="title">
-                    <content select="[bannerTitle]"></content>
+                    <slot name="bannerTitle"></slot>
                 </div>
                 <div>
                     <paper-icon-button icon="check" disabled$="[[!status.isDirty]]"
                                        on-tap="_onSave"></paper-icon-button>
                     <earth-dropdown-trigger>
-                        <paper-icon-button class="dropdown-trigger" icon="more-vert"></paper-icon-button>
+                        <paper-icon-button slot="dropdown-trigger" icon="more-vert"></paper-icon-button>
                         <ul class="dropdown-content" tabindex="0">
                             <li>
                                 <paper-icon-item on-tap="_onDelete">
@@ -78,7 +80,7 @@ The `earth-editable-layout` provides layout for edition
 
             <!-- Main Content -->
             <div class="content fit">
-                <content></content>
+                <slot></slot>
             </div>
         </paper-header-panel>
 
@@ -97,7 +99,7 @@ The `earth-editable-layout` provides layout for edition
                 status: {
                     type: Object,
                     notify: true
-                }
+                },
             },
 
             listeners: {
