--- a/earth-expand-animation.html
+++ b/earth-expand-animation.html
@@ -1,6 +1,6 @@
-<link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../polymer/polymer.html">
 
-<link rel="import" href="../../neon-animation/neon-animation-behavior.html">
+<link rel="import" href="../neon-animation/neon-animation-behavior.html">
 
 <!--
 
