--- a/demo/index.html
+++ b/demo/index.html
@@ -1,38 +1,32 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>earth-editable-layout demos</title>
+    <title>polymer2-element demo</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
-
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-
-
-    <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
-    <link rel="import" href="../../paper-styles/classes/typography.html">
-    <link rel="stylesheet" href="../../paper-styles/demo.css">
+    <link rel="import" href="../polymer2-element.html">
 
     <link rel="import" href="demo-edit-layout.html">
 
-    <style is="custom-style" include="demo-pages-shared-styles iron-flex iron-flex-alignment">
-    </style>
+    <custom-style>
+        <style is="custom-style" include="demo-pages-shared-styles">
+        </style>
+    </custom-style>
 </head>
-<body class="fullbleed layout vertical">
-
-<template is="dom-bind">
-    <h1>Earth Edit Layout</h1>
-
-    <div class="horizontal center-center layout" >
-        <div>
-            <div class="horizontal-section" >
-                <demo-edit-layout></demo-edit-layout>
-            </div>
-        </div>
-
-</template>
-
+<body>
+<div class="vertical-section-container centered">
+    <h3>Basic earth-editable-layout demo</h3>
+    <demo-snippet>
+        <template>
+            <demo-edit-layout></demo-edit-layout>
+        </template>
+    </demo-snippet>
+</div>
 </body>
 </html>
