--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -15,7 +15,7 @@
 <link rel="import" href="../paper-item/paper-icon-item.html">
 <link rel="import" href="../paper-item/paper-item.html">
 
-<link rel="import" href="earth-dropdown-trigger.html">
+<!--<link rel="import" href="earth-dropdown-trigger.html">-->
 
 
 <dom-module id="earth-editable-layout">
