--- a/demo/demo-edit-layout.html
+++ b/demo/demo-edit-layout.html
@@ -6,7 +6,7 @@
 <link rel="import" href="../../paper-input/paper-input.html">
 <link rel="import" href="../../paper-button/paper-button.html">
 
-<link rel="import" href="../earth-editable-layout-old.html">
+<link rel="import" href="../earth-editable-layout.html">
 
 <link rel="import" href="../../air-cruddy/air-cruddy-elasticsearch.html">
 
