--- a/demo/index.html
+++ b/demo/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>polymer2-element demo</title>
+    <title>earth-editable-layout demo</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../polymer2-element.html">
+    <link rel="import" href="../earth-editable-layout.html">
 
     <link rel="import" href="demo-edit-layout.html">
 
