--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -2,73 +2,61 @@
 
 
 <link rel="import" href="../iron-icons/iron-icons.html">
-<link rel="import" href="../iron-dropdown/iron-dropdown.html">
 
+<link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
 
-<link rel="import" href="../paper-drawer-panel/paper-drawer-panel.html">
-<link rel="import" href="../paper-header-panel/paper-header-panel.html">
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
-<link rel="import" href="../paper-toolbar/paper-toolbar.html">
 
-<link rel="import" href="../paper-item/paper-icon-item.html">
-<link rel="import" href="../paper-item/paper-item.html">
-
-<!--<link rel="import" href="earth-dropdown-trigger.html">-->
-
+<link rel="import" href="../app-layout/app-drawer/app-drawer.html">
+<link rel="import" href="../app-layout/app-drawer-layout/app-drawer-layout.html">
+<link rel="import" href="../app-layout/app-header/app-header.html">
+<link rel="import" href="../app-layout/app-header-layout/app-header-layout.html">
+<link rel="import" href="../app-layout/app-toolbar/app-toolbar.html">
+<link rel="import" href="../app-layout/app-scroll-effects/app-scroll-effects.html">
 
 <dom-module id="earth-editable-layout">
     <template>
-        <style include="iron-flex iron-flex-alignment">
+        <style>
             :host {
                 display: block;
-                height: 100%;
+                margin: 0;
+                @apply(--layout-fit);
+                background-color: var(--light-theme-background-color);
             }
 
-            ul {
-                list-style-type: none;
+            app-header {
+                background-color: var(--primary-color);
+                color:var(--light-primary-color);
+                @apply(--layout-flex);
+            }
+
+            app-header paper-icon-button {
+                --paper-icon-button-ink-color: white;
+            }
+
+            app-drawer-layout:not([narrow]) [drawer-toggle] {
+                display: none;
             }
         </style>
 
 
-        <paper-header-panel>
+            <app-header-layout>
 
-            <!-- Header Toolbar -->
-            <paper-toolbar>
-                <paper-icon-button icon="arrow-back" on-tap="onBack"></paper-icon-button>
-                <div class="title">
-                    <slot name="bannerTitle"></slot>
-                </div>
-                <div>
-                    <paper-icon-button icon="check" disabled$="[[!status.isDirty]]"
-                                       on-tap="_onSave"></paper-icon-button>
-                    <earth-dropdown-trigger>
-                        <paper-icon-button slot="dropdown-trigger" icon="more-vert"></paper-icon-button>
-                        <ul class="dropdown-content" tabindex="0">
-                            <li>
-                                <paper-icon-item on-tap="_onDelete">
-                                    <iron-icon icon="delete" item-icon></iron-icon>
-                                    Delete
-                                </paper-icon-item>
-                            </li>
-                            <li>
-                                <paper-icon-item on-tap="_onSave">
-                                    <iron-icon icon="check" item-icon></iron-icon>
-                                    Save
-                                </paper-icon-item>
-                            </li>
-                        </ul>
-                    </earth-dropdown-trigger>
+                <app-header slot="header" fixed effects="waterfall">
+                    <app-toolbar>
+                        <paper-icon-button icon="icons:arrow-back"></paper-icon-button>
+                        <div main-title>My Drive</div>
+                        <paper-icon-button icon="icons:save"></paper-icon-button>
+                    </app-toolbar>
+                </app-header>
 
-                </div>
-            </paper-toolbar>
+                <slot name="content"></slot>
 
-            <!-- Main Content -->
-            <div class="content fit">
-                <slot></slot>
-            </div>
-        </paper-header-panel>
+            </app-header-layout>
+
+
 
     </template>
 
@@ -88,106 +76,12 @@
 
             static get properties() {
                 return {
-                    status: {
-                        type: Object
+                    prop1: {
+                        type: String,
+                        value: 'earth-editable-layout'
                     }
                 };
             }
-
-//            listeners: {
-//                'air-cruddy-element-register': '_registerCruddyElement',
-//                'air-cruddy-element-unregister': '_unregisterCruddyElement',
-//                'air-cruddy-status': 'printChange'
-//            },
-
-
-            printChange(e) {
-                this.set('status', e.detail);
-            }
-
-
-            // --- Life Cycle
-            // --- ---------------------------
-            openMoreAction() {
-                this.$.dropdownMoreAction.open();
-            }
-
-            // --- Life Cycle
-            // --- ---------------------------
-            ready() {
-                // Holds all the custom elements registered with this form.
-                this._cruddyElements = [];
-            }
-
-            // --- Status computer
-            // --- ---------------------------
-            _isSavabled(status) {
-                return !this.status.isDirty;
-            }
-
-            // --- Node Watcher
-            // --- ---------------------------
-            _registerCruddyElement(e) {
-                e.target._parentForm = this;
-                if (this !== e.target) {
-                    // Single
-                    this._cruddyElement = e.target;
-                    this.set('status', this._cruddyElement.crudStatus);
-                    // List
-                    this._cruddyElements.push(e.target);
-                }
-            }
-
-            _unregisterCruddyElement(e) {
-                const target = e.detail.target;
-                if (target) {
-                    //
-                    // List
-                    const index = this._cruddyElements.indexOf(target);
-                    if (index > -1) {
-                        this._cruddyElements.splice(index, 1);
-                    }
-                }
-            }
-
-            // --- Button
-            // --- ---------------------------
-
-            _onSave(event) {
-                this.save();
-            }
-
-            _onDelete(event) {
-                this.delete();
-            }
-
-
-            // --- Crud Status
-            // --- ---------------------------
-
-
-            // --- Action
-            // --- ---------------------------
-
-            _callCruddyFunction(funcName) {
-                if (this._cruddyElements) {
-                    this._cruddyElements.forEach(function (elt) {
-                        if (typeof elt[funcName] === 'function') {
-                            elt[funcName]();
-                        }
-                    });
-                }
-            }
-
-
-            save() {
-                this._callCruddyFunction('save');
-            }
-
-            delete() {
-                this._callCruddyFunction('delete');
-            }
-
         }
 
         window.customElements.define(EarthEditableLayout.is, EarthEditableLayout);
