--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -49,6 +49,9 @@
                         <paper-icon-button icon="icons:arrow-back"></paper-icon-button>
                         <div main-title>My Drive</div>
                         <paper-icon-button icon="icons:save"></paper-icon-button>
+                        <paper-icon-button icon="icons:refresh"></paper-icon-button>
+                        <paper-icon-button icon="icons:clear"></paper-icon-button>
+                        <paper-icon-button icon="icons:more-vert"></paper-icon-button>
                     </app-toolbar>
                 </app-header>
 
